--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
           <li><a href="index.html">Home</a></li>
           <li class="dropdown"><a href="#about.html" class="active"><span>About</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
+              <li><a href="Visi Misi Desa.html">Visi Misi Desa</a></li>
+              <li><a href="Potensi Desa.html">Potensi Desa</a></li>
               <li class="dropdown"><a href="#"><span></span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   
@@ -102,13 +102,12 @@
           </div>
 
           <div class="col-lg-7">
-            <h3 class="pt-0 pt-lg-5">Neque officiis dolore maiores et exercitationem quae est seda lidera pat claero</h3>
+            <h3 class="pt-0 pt-lg-5">VISI MISI DESA TALAGASARI</h3>
 
             <!-- Tabs -->
             <ul class="nav nav-pills mb-3">
-              <li><a class="nav-link active" data-bs-toggle="pill" href="#about-2-tab1">Saepe fuga</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#about-2-tab2">Voluptates</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#about-2-tab3">Corrupti</a></li>
+              <li><a class="nav-link active" data-bs-toggle="pill" href="#about-2-tab1">VISI</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#about-2-tab2">MISI</a></li>
             </ul><!-- End Tabs -->
 
             <!-- Tab Content -->
