--- a/about.html
+++ b/about.html
@@ -115,13 +115,13 @@
 
               <div class="tab-pane fade show active" id="about-2-tab1">
 
-                <p class="fst-italic">**</p>
+                <p class="fst-italic">Terwujudnya Peningkatan Kesejahteraan Dan Kemandirian Masyarakat Desa Talagasari Melalui Peningkatan Iman Dan Taqwa Kepada Allah SWT</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
+                  <h4>epudiandae rerum velit modi et officia quasi facilis</h4>
                 </div>
-                <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non eveniet magni quaerat nemo et.</p>
+                <p>Laborum omnis vRoluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non eveniet magni quaerat nemo et.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
@@ -143,9 +143,9 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
+                  <h4></h4>
                 </div>
-                <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non eveniet magni quaerat nemo et.</p>
+                <p></p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
