--- a/about.html
+++ b/about.html
@@ -143,9 +143,9 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4></h4>
+                  <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
                 </div>
-                <p></p>
+                <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non eveniet magni quaerat nemo et.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
