--- a/about.html
+++ b/about.html
@@ -139,13 +139,13 @@
 
               <div class="tab-pane fade" id="about-2-tab2">
 
-                <p class="fst-italic">Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita. Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
+                <p class="fst-italic">Pembangunan Desa.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
+                  <h4>1.Meningkatkan Kualitas dan Kuantitas Kegiatan Keagamaan</h4>
                 </div>
-                <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non eveniet magni quaerat nemo et.</p>
+                <p>Meningkatkan kualita keagamaan masyarakat desa melalui kegiatan yang berkelanjutan dan berdampak positif.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
