--- a/about.html
+++ b/about.html
@@ -125,13 +125,13 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Incidunt non veritatis illum ea ut nisi</h4>
+                  <h4>Memperioritaskan pembangunan sarana dan prasarana pertanian</h4>
                 </div>
-                <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et perferendis.</p>
+                <p>Meningkatkan kesejahtraan masyarakat desa melalui pembangunan sarana dan prasarana pertanian yang memadai dan berkelanjutan.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Omnis ab quia nemo dignissimos rem eum quos..</h4>
+                  <h4>Menata dan mengembangkan menejemen badan usaha milik desa (BUM Desa)</h4>
                 </div>
                 <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam officia aut ut alias quo explicabo ullam esse. Sunt magnam et dolorem eaque magnam odit enim quaerat. Vero error error voluptatem eum.</p>
 
@@ -143,7 +143,7 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>1.Meningkatkan Kualitas dan Kuantitas Kegiatan Keagamaan</h4>
+                  <h4>Meningkatkan Kualitas dan Kuantitas Kegiatan Keagamaan</h4>
                 </div>
                 <p>Meningkatkan kualita keagamaan masyarakat desa melalui kegiatan yang berkelanjutan dan berdampak positif.</p>
 
