--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li class="dropdown"><a href="#about.html" class="active"><span>About</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="#About.html" class="active"><span>PROFILE</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="Visi Misi Desa.html">Visi Misi Desa</a></li>
               <li><a href="Potensi Desa.html">Potensi Desa</a></li>
@@ -68,7 +68,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="about.html">Get Started</a>
+      <a class="btn-getstarted" href="PROFILE.html">Get Started</a>
 
     </div>
   </header>
@@ -78,11 +78,11 @@
     <!-- Page Title -->
     <div class="page-title light-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">About</h1>
+        <h1 class="mb-2 mb-lg-0">PROFILE</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">About</li>
+            <li class="current">PROFILE</li>
           </ol>
         </nav>
       </div>
@@ -119,21 +119,21 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>epudiandae rerum velit modi et officia quasi facilis</h4>
+                  <h4>Maju</h4>
                 </div>
-                <p>Laborum omnis vRoluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non eveniet magni quaerat nemo et.</p>
+                <p>Desa yang memiliki insfrastruktur dan fasilitas yang memadai untuk mendukung kegiatan ekonomi dan  sosial.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Memperioritaskan pembangunan sarana dan prasarana pertanian</h4>
+                  <h4>Sejahtera</h4>
                 </div>
-                <p>Meningkatkan kesejahtraan masyarakat desa melalui pembangunan sarana dan prasarana pertanian yang memadai dan berkelanjutan.</p>
+                <p>Desa yang memiliki masyarakat yang sejahtera, dengan akses yang memadai ke pendidikan, kesehatan, dan lapangan kerja.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Menata dan mengembangkan menejemen badan usaha milik desa (BUM Desa)</h4>
+                  <h4>Desa yang Mandiri dan Berdikari</h4>
                 </div>
-                <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam officia aut ut alias quo explicabo ullam esse. Sunt magnam et dolorem eaque magnam odit enim quaerat. Vero error error voluptatem eum.</p>
+                <p>Desa yang mampu mengelola diri sendiri, memenuhi kebutuhan sendiri, dan tidak bergantung pada bantuan orang lain .</p>
 
               </div><!-- End Tab 1 Content -->
 
@@ -149,15 +149,15 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Incidunt non veritatis illum ea ut nisi</h4>
+                  <h4>Memperioritaskan pembangunan sarana dan prasarana pertanian</h4>
                 </div>
-                <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et perferendis.</p>
+                <p>Meningkatkan kesejahtraan masyarakat desa melalui pembangunan sarana dan prasarana pertanian yang memadai dan berkelanjutan.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Omnis ab quia nemo dignissimos rem eum quos..</h4>
+                  <h4>Meningkatkan Sarana dan Prasarana Desa</h4>
                 </div>
-                <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam officia aut ut alias quo explicabo ullam esse. Sunt magnam et dolorem eaque magnam odit enim quaerat. Vero error error voluptatem eum.</p>
+                <p>Meningkatkan kualitas hidup masyarakat desa dengan membangun dan meningkatkan sarana dan prasarana desa yang memadai dan berkualitas.</p>
 
               </div><!-- End Tab 2 Content -->
 
