--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - Sailor Bootstrap Template</title>
+  <title>about - Sailor Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -50,7 +50,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li class="dropdown"><a href="#About.html" class="active"><span>PROFILE</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="#about.html" class="active"><span>about</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="Visi Misi Desa.html">Visi Misi Desa</a></li>
               <li><a href="Potensi Desa.html">Potensi Desa</a></li>
@@ -68,7 +68,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="PROFILE.html">Get Started</a>
+      <a class="btn-getstarted" href="about.html">Get Started</a>
 
     </div>
   </header>
@@ -78,17 +78,17 @@
     <!-- Page Title -->
     <div class="page-title light-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">PROFILE</h1>
+        <h1 class="mb-2 mb-lg-0">about</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">PROFILE</li>
+            <li class="current">about</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- About 2 Section -->
+    <!-- about 2 Section -->
     <section id="about-2" class="about-2 section">
 
       <div class="container" data-aos="fade-up">
@@ -193,7 +193,7 @@
 
       </div>
 
-    </section><!-- /About 2 Section -->
+    </section><!-- /PROFILE 2 Section -->
 
     <!-- Stats Section -->
     <section id="stats" class="stats section light-background">
@@ -414,7 +414,7 @@
           <h4>Useful Links</h4>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
+            <li><a href="#">PROFILE us</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
